Fixed bug with menu

--- a/app/pug/helpers/data.pug
+++ b/app/pug/helpers/data.pug
@@ -1,16 +1,16 @@
 -
 	var navigation = [
 		{
-			name: 'Link_1',
-			link: 'index.html'
+			name: 'Что будет на консультации',
+			link: '#section-consultation'
 		},
 		{
-			name: 'Link 2',
-			link: 'index2.html'
+			name: 'О нас',
+			link: '#section-about'
 		},
 		{
-			name: 'Link 3',
-			link: 'index3.html'
+			name: 'Отзывы родителей',
+			link: '#section-review'
 		}
 	];
 
