--- a/app/pug/layouts/header.html
+++ b/app/pug/layouts/header.html
@@ -1,5 +1,7 @@
 
 <header class="v-site-header">
-  <div class="v-site-header__container">
+  <div class="v-container">
+    <h1 class="v-title-lg">Среднее<br/>образование в <span class="flag">Польше</span>
+    </h1>
   </div>
 </header>
