--- a/app/pug/layouts/header.pug
+++ b/app/pug/layouts/header.pug
@@ -2,4 +2,9 @@ include ../bem/index
 include ../helpers/config
 
 +b.HEADER.site-header
-	+e.container
+	.v-container
+		+b.H1.title-lg
+			|Среднее
+			br
+			|образование в 
+			span.flag Польше
