--- a/app/sass/base/_fonts.scss
+++ b/app/sass/base/_fonts.scss
@@ -16,24 +16,5 @@
 	}
 }
 
-//@include connect-font(ProximaRegular,regular);
-//@include connect-font(ProximaLight,light);
-//@include connect-font(ProximaBold,bold);
-//@include connect-font(ProximaBlack,black);
-
-
-.font-general{
-	font-family: 'Roboto', sans-serif;
-}
-$font-weights: (
-	'font-weight-regular' : 400,
-	'font-weight-light'   : 300,
-	'font-weight-bold'    : 700,
-	'font-weight-heavy'   : 900
-);
-
-@each $name, $weight in $font-weights{
-	.#{$name}{
-		font-weight: $weight;
-	}
-}
+@include connect-font(Formular, font-general);
+@include connect-font(FormularBold,bold);
