--- a/app/css/style.css
+++ b/app/css/style.css
@@ -59,7 +59,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   font-size: 18px;
   line-height: 1.42857143;
-  color: #191919;
+  color: #000;
 }
 
 img {
@@ -71,27 +71,24 @@ a, button {
   cursor: pointer;
 }
 
+@font-face {
+  font-family: Formular;
+
+  src: local("Formular"), url(../fonts/Formular.otf);
+}
+
 .font-general, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: Formular;
 }
 
-.font-weight-regular, body {
-  font-weight: 400;
+@font-face {
+  font-family: FormularBold;
+
+  src: local("FormularBold"), url(../fonts/FormularBold.otf);
 }
 
-.font-weight-light {
-  font-weight: 300;
-}
-
-.font-weight-bold, .v-btn, .modal__title {
-  font-weight: 700;
-}
-
-.font-weight-heavy, strong,
-.strong,
-b,
-.b {
-  font-weight: 900;
+.bold, .v-title-xs, .v-title-sm, .v-title-md, .v-title-lg {
+  font-family: FormularBold;
 }
 
 /* -----------------------------------------------------------------------------
@@ -804,7 +801,7 @@ b,
 .v-fixed {
   position: fixed;
   left: 0;
-  z-index: z-index-index("fixed");
+  z-index: 10;
   width: 100%;
 }
 
@@ -840,7 +837,7 @@ b,
     width: 100%;
     height: 56px;
     padding: 11px 0;
-    background-color: #28a5f5;
+    background-color: #ff911b;
     -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
     box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
 
@@ -873,7 +870,7 @@ b,
 }
 
 @media (max-width: 1024px) {
-  .vnav_style .v-nav__menu {
+  .v-nav__menu {
     position: fixed;
     top: 56px;
     left: 0;
@@ -882,17 +879,23 @@ b,
     height: 100%;
     padding: 0 0 100px 0;
     overflow-y: auto;
-    background-color: #28a5f5;
+    background-color: #ff911b;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
     -webkit-transform: translateZ(0) translateX(-120%);
     transform: translateZ(0) translateX(-120%);
   }
-  .vnav_style .v-nav__menu_active {
+  .v-nav__menu.active {
     -webkit-transform: none;
     -ms-transform: none;
     transform: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-nav__menu {
+    text-align: right;
   }
 }
 
@@ -938,7 +941,7 @@ b,
     width: 0%;
     height: 2px;
     content: "";
-    background-color: #28a5f5;
+    background-color: #ff911b;
   }
   .v-nav__menu-item a:before {
     left: 0;
@@ -970,12 +973,16 @@ b,
 
 .v-nav__logo-content {
   display: inline-block;
+  vertical-align: middle;
 }
 
-@media (max-width: 1024px) {
-  .nav_style .v-nav__logo img {
-    max-height: 28px;
-    vertical-align: middle;
+.v-nav__logo-content-img {
+  max-height: 23px;
+}
+
+@media (min-width: 1025px) {
+  .v-nav__logo-content-img {
+    max-height: 46px;
   }
 }
 
@@ -1127,7 +1134,7 @@ b,
     width: 55px;
     height: 56px;
     content: "";
-    background-color: #097dc7;
+    background-color: #ce6a00;
     opacity: 0;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
@@ -1139,7 +1146,7 @@ b,
     right: 0;
     min-width: 180px;
     padding: 15px;
-    background-color: #28a5f5;
+    background-color: #ff911b;
     -webkit-transition: all .5s ease;
     -o-transition: all .5s ease;
     transition: all .5s ease;
@@ -1169,9 +1176,28 @@ b,
   }
 }
 
-.v-header {
+.v-site-header {
   position: relative;
   z-index: 1;
+  padding-top: 75px;
+  padding-bottom: 50px;
+  color: #fff;
+  background: url("../img/header.jpg") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1025px) {
+  .v-site-header {
+    background-attachment: fixed;
+  }
+}
+
+@media (min-width: 768px) {
+  .v-site-header {
+    padding-top: 140px;
+    padding-bottom: 75px;
+  }
 }
 
 .v-footer {
@@ -1179,11 +1205,11 @@ b,
 }
 
 .v-color-brand-1 {
-  color: #28a5f5;
+  color: #ff911b;
 }
 
 .v-color-brand-2 {
-  color: #f00;
+  color: #0057a2;
 }
 
 .v-color-black {
@@ -1191,11 +1217,11 @@ b,
 }
 
 .v-bg-brand-1 {
-  background-color: #28a5f5;
+  background-color: #ff911b;
 }
 
 .v-bg-brand-2 {
-  background-color: #f00;
+  background-color: #0057a2;
 }
 
 .v-offset-static-xs {
@@ -1393,8 +1419,8 @@ b,
 }
 
 .v-btn_shadow-brand-1 {
-  -webkit-box-shadow: 0 3px 8px 1px rgba(40, 165, 245, .5);
-  box-shadow: 0 3px 8px 1px rgba(40, 165, 245, .5);
+  -webkit-box-shadow: inset 0px -4px 0px 0px rgba(0, 0, 0, .15);
+  box-shadow: inset 0px -4px 0px 0px rgba(0, 0, 0, .15);
 }
 
 .v-btn_shadow:hover {
@@ -1403,7 +1429,8 @@ b,
 }
 
 .v-btn_navigation {
-  background-color: #40aff6;
+  color: #fff;
+  background-color: #ff9d35;
 }
 
 @media (max-width: 1024px) {
@@ -1417,12 +1444,17 @@ b,
 
 @media (min-width: 1025px) {
   .v-btn_navigation {
-    background-color: #28a5f5;
+    background-color: #ff911b;
+    -webkit-box-shadow: inset 0px -4px 0px 0px rgba(0, 0, 0, .15);
+    box-shadow: inset 0px -4px 0px 0px rgba(0, 0, 0, .15);
+  }
+  .v-btn_navigation:before {
+    background-color: #e77800;
   }
 }
 
 .v-btn_white {
-  color: #28a5f5;
+  color: #ff911b;
   background-color: #fff;
 }
 
@@ -1436,15 +1468,15 @@ b,
 
 .v-btn_brand-1 {
   color: #fff;
-  background-color: #28a5f5;
+  background-color: #ff911b;
 }
 
 .v-btn_brand-1:before {
-  background-color: #097dc7;
+  background-color: #ce6a00;
 }
 
 .v-btn_brand-1-simple:hover {
-  background-color: #097dc7;
+  background-color: #ce6a00;
 }
 
 .v-btn_border-brand-1 {
@@ -1453,13 +1485,13 @@ b,
 }
 
 .v-btn_border-brand-1 {
-  color: #28a5f5;
+  color: #ff911b;
   background-color: transparent;
-  border-color: #28a5f5;
+  border-color: #ff911b;
 }
 
 .v-btn_border-brand-1:before {
-  background-color: #28a5f5;
+  background-color: #ff911b;
 }
 
 .v-form {
@@ -1564,7 +1596,7 @@ b,
   left: 0;
   width: 0;
   height: 1px;
-  background-color: #28a5f5;
+  background-color: #ff911b;
   -webkit-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
@@ -1581,7 +1613,7 @@ input:focus + .v-form__line {
   width: 100%;
   height: 1px;
   content: "";
-  background-color: #28a5f5;
+  background-color: #ff911b;
 }
 
 @media (min-width: 480px) {
@@ -1698,19 +1730,19 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .control_default input[type="radio"] + .control__indicator {
-  border-color: #28a5f5;
+  border-color: #ff911b;
 }
 
 .control_default input[type="radio"] + .control__indicator:before {
-  background-color: #28a5f5;
+  background-color: #ff911b;
 }
 
 .control_default input[type="checkbox"] + .control__indicator {
-  border-color: #28a5f5;
+  border-color: #ff911b;
 }
 
 .control_default input[type="checkbox"] + .control__indicator:before {
-  border-color: #28a5f5;
+  border-color: #ff911b;
 }
 
 .v-list {
@@ -1738,85 +1770,85 @@ input[type="checkbox"]:checked + .control__indicator:before {
   height: 37px;
 }
 
-.vtitle-xs, .vtitle-sm, .vtitle-md, .vtitle-lg {
-  margin-top: 10px;
+.v-title-xs, .v-title-sm, .v-title-md, .v-title-lg {
+  margin-top: 5px;
   margin-bottom: 15px;
   font-weight: normal;
   line-height: 1.2;
 }
 
-.vtitle-xs {
+.v-title-xs {
   font-size: 18px;
 }
 
 @media (min-width: 480px) {
-  .vtitle-xs {
+  .v-title-xs {
     font-size: 18px;
   }
 }
 
-.vtitle-sm {
+.v-title-sm {
   font-size: 20px;
 }
 
 @media (min-width: 768px) {
-  .vtitle-sm {
+  .v-title-sm {
     font-size: 20px;
   }
 }
 
 @media (min-width: 1025px) {
-  .vtitle-sm {
+  .v-title-sm {
     font-size: 30px;
   }
 }
 
 @media (min-width: 1200px) {
-  .vtitle-sm {
+  .v-title-sm {
     font-size: 40px;
   }
 }
 
-.vtitle-md {
+.v-title-md {
   font-size: 25px;
 }
 
 @media (min-width: 768px) {
-  .vtitle-md {
+  .v-title-md {
     font-size: 30px;
   }
 }
 
 @media (min-width: 1025px) {
-  .vtitle-md {
+  .v-title-md {
     font-size: 40px;
   }
 }
 
 @media (min-width: 1200px) {
-  .vtitle-md {
+  .v-title-md {
     font-size: 50px;
   }
 }
 
-.vtitle-lg {
+.v-title-lg {
   font-size: 30px;
 }
 
 @media (min-width: 768px) {
-  .vtitle-lg {
+  .v-title-lg {
     font-size: 40px;
   }
 }
 
 @media (min-width: 1025px) {
-  .vtitle-lg {
+  .v-title-lg {
     font-size: 50px;
   }
 }
 
 @media (min-width: 1200px) {
-  .vtitle-lg {
+  .v-title-lg {
     font-size: 60px;
   }
 }
@@ -1850,7 +1882,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .vtabs__list-item.active .vtabs__list-item-link {
-  color: #28a5f5;
+  color: #ff911b;
 }
 
 .vtabs__content-inner {
@@ -1936,7 +1968,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .modal__close:hover {
-  color: #28a5f5;
+  color: #ff911b;
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
@@ -2005,7 +2037,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
   width: 25%;
   height: 2px;
   content: "";
-  background-color: #28a5f5;
+  background-color: #ff911b;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
@@ -2076,7 +2108,7 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .js-collapse__group-header:hover {
-  background-color: rgba(40, 165, 245, .1);
+  background-color: rgba(255, 145, 27, .1);
 }
 
 .js-collapse__group-title {
@@ -2090,5 +2122,5 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .js-collapse__group.active .js-collapse__group-header {
-  border-bottom-color: #28a5f5;
+  border-bottom-color: #ff911b;
 }
