--- a/app/sass/helpers/variables/_var-colors.scss
+++ b/app/sass/helpers/variables/_var-colors.scss
@@ -5,7 +5,7 @@
 ////
 
 /// Color general
-$color-general: #191919;
+$color-general: #000000;
 
 /// Color Black
 $color-black: #000;
@@ -14,10 +14,10 @@ $color-black: #000;
 $color-white: #fff;
 
 /// Color Branding One
-$color-brand-1: #28a5f5;
+$color-brand-1: #ff911b;
 
 /// Color Branding Two
-$color-brand-2: #f00;
+$color-brand-2: #0057a2;
 
 /// Color Success
 $color-success: #5cb85c;
