--- a/app/sass/layouts/nav/_nav-menu.scss
+++ b/app/sass/layouts/nav/_nav-menu.scss
@@ -2,22 +2,23 @@
 	@include e('menu'){
 		-webkit-overflow-scrolling:touch;
 		@include max(md){
-			.v#{$themeNav}_style &{
-				transform: translateZ(0) translateX(-120%);
-				position: fixed;
-				left: 0;
-				width: 270px;
-				height: 100%;
-				padding: 0 0 100px 0;
-				top: 56px;
-				z-index: z-index('default');
-				overflow-y: auto;
-				@include transition();
-				background-color: $color-responsive-menu;
-				&_active{
-					transform: none;
-				}
+			transform: translateZ(0) translateX(-120%);
+			position: fixed;
+			left: 0;
+			width: 270px;
+			height: 100%;
+			padding: 0 0 100px 0;
+			top: 56px;
+			z-index: z-index('default');
+			overflow-y: auto;
+			@include transition();
+			background-color: $color-responsive-menu;
+			&.active{
+				transform: none;
 			}
+		}
+		@include min(md){
+			text-align: right;
 		}
 	}
 }
