--- a/app/css/style.css
+++ b/app/css/style.css
@@ -798,418 +798,16 @@ a, button {
 /* -----------------------------------------------------------------------------
 	HIDDEN AND VISIBLE UTILITIES
 ----------------------------------------------------------------------------- */
-.v-fixed {
-  position: fixed;
-  left: 0;
-  z-index: 10;
-  width: 100%;
-}
-
-@media (max-width: 1024px) {
-  .v-fixed + .site {
-    margin-top: 56px;
-  }
-}
-
-@media (min-width: 1025px) {
-  .v-fixed_md-top {
-    top: 0;
-  }
-}
-
-.v-nav__row {
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-}
-
-@media (max-width: 1024px) {
-  .v-nav_style {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: 56px;
-    padding: 11px 0;
-    background-color: #ff911b;
-    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
-
-    -webkit-box-align: center;
-
-    -webkit-align-items: center;
-
-    -ms-flex-align: center;
-
-    align-items: center;
-  }
-  .v-nav_style + .site {
-    margin-top: 56px;
-  }
-  .v-nav_style .v-nav__container {
-    -webkit-flex-basis: 100%;
-    -ms-flex-preferred-size: 100%;
-    flex-basis: 100%;
-  }
-}
-
-@media (min-width: 1025px) {
-  .v-nav {
-    padding: 25px 0;
-  }
-}
-
-.v-nav__menu {
-  -webkit-overflow-scrolling: touch;
-}
-
-@media (max-width: 1024px) {
-  .v-nav__menu {
-    position: fixed;
-    top: 56px;
-    left: 0;
-    z-index: 1;
-    width: 270px;
-    height: 100%;
-    padding: 0 0 100px 0;
-    overflow-y: auto;
-    background-color: #ff911b;
-    -webkit-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition: all .5s ease;
-    -webkit-transform: translateZ(0) translateX(-120%);
-    transform: translateZ(0) translateX(-120%);
-  }
-  .v-nav__menu.active {
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-  }
-}
-
-@media (min-width: 1025px) {
-  .v-nav__menu {
-    text-align: right;
-  }
-}
-
-.v-nav__menu-item {
-  display: block;
-  -webkit-transition: all .5s ease;
-  -o-transition: all .5s ease;
-  transition: all .5s ease;
-}
-
-.v-nav__menu-item a {
-  position: relative;
-  display: block;
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (max-width: 1024px) {
-  .v-nav__menu-item {
-    margin-bottom: 10px;
-  }
-  .v-nav__menu-item a {
-    padding: 10px 15px;
-    color: #fff;
-  }
-}
-
-@media (min-width: 1025px) {
-  .v-nav__menu-item {
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .v-nav__menu-item:not(:last-child) {
-    margin-right: 15px;
-  }
-  .v-nav__menu-item a {
-    padding-top: 7.5px;
-    padding-bottom: 7.5px;
-  }
-  .v-nav__menu-item a:before, .v-nav__menu-item a:after {
-    position: absolute;
-    bottom: -2px;
-    width: 0%;
-    height: 2px;
-    content: "";
-    background-color: #ff911b;
-  }
-  .v-nav__menu-item a:before {
-    left: 0;
-  }
-  .v-nav__menu-item a:after {
-    right: 0;
-    -webkit-transition: width .8s cubic-bezier(.22, .61, .36, 1);
-    -o-transition: width .8s cubic-bezier(.22, .61, .36, 1);
-    transition: width .8s cubic-bezier(.22, .61, .36, 1);
-  }
-  .v-nav__menu-item a:hover:before {
-    width: 100%;
-    -webkit-transition: width .5s cubic-bezier(.22, .61, .36, 1);
-    -o-transition: width .5s cubic-bezier(.22, .61, .36, 1);
-    transition: width .5s cubic-bezier(.22, .61, .36, 1);
-  }
-  .v-nav__menu-item a:hover:after {
-    width: 100%;
-    background-color: transparent;
-    -webkit-transition: 0s;
-    -o-transition: 0s;
-    transition: 0s;
-  }
-}
-
-.v-nav__logo {
-  font-size: 0;
-}
-
-.v-nav__logo-content {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.v-nav__logo-content-img {
-  max-height: 23px;
-}
-
-@media (min-width: 1025px) {
-  .v-nav__logo-content-img {
-    max-height: 46px;
-  }
-}
-
-/* -----------------------------------------------------------------------------
-
-  HAMBURGER COMPONENT
-  
------------------------------------------------------------------------------ */
-.v-hamburger {
-  padding: 0;
-  margin-right: 15px;
-  background-color: transparent;
-  border: none;
-  outline: none;
-
-  -webkit-appearance: none;
-
-  -moz-appearance: none;
-
-  appearance: none;
-  -webkit-tap-highlight-color: transparent;
-}
-
-.v-hamburger, .v-hamburger__lines, .v-hamburger__text {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.v-hamburger, .v-hamburger__lines, .v-hamburger__lines span {
-  -webkit-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  transition: all .3s ease;
-}
-
-.v-hamburger__lines {
-  position: relative;
-  width: 24px;
-  height: 20px;
-  text-indent: -9999px;
-}
-
-.v-hamburger__lines span {
-  position: absolute;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: #fff;
-}
-
-.v-hamburger__lines span:nth-child(1) {
-  top: 0;
-  -webkit-transform-origin: 3px 5px;
-  -ms-transform-origin: 3px 5px;
-  transform-origin: 3px 5px;
-}
-
-.v-hamburger__lines span:nth-child(2) {
-  top: 8px;
-  opacity: 1;
-}
-
-.v-hamburger__lines span:nth-child(3) {
-  top: 16px;
-  -webkit-transform-origin: 1px -1px;
-  -ms-transform-origin: 1px -1px;
-  transform-origin: 1px -1px;
-}
-
-.v-hamburger__text {
-  margin-left: 15px;
-  font-size: 18px;
-  font-weight: bold;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-.v-hamburger.active .v-hamburger__lines span:nth-child(1) {
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.v-hamburger.active .v-hamburger__lines span:nth-child(2) {
-  opacity: 0;
-  -webkit-transform: translateX(-60px);
-  -ms-transform: translateX(-60px);
-  transform: translateX(-60px);
-}
-
-.v-hamburger.active .v-hamburger__lines span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-}
-
-@media (min-width: 1025px) {
-  .v-hamburger {
-    display: none;
-  }
-}
-
-.v-nav__addition {
-  position: relative;
-  display: inline-block;
-  font-weight: bold;
-  color: #000;
-}
-
-.v-nav__addition-link {
-  display: block;
-  color: inherit;
-  text-decoration: none;
-}
-
-.v-nav__addition-toggle {
-  display: block;
-  cursor: pointer;
-  outline: none;
-
-  -webkit-tap-highlight-color: transparent;
-}
-
-.v-nav__addition-toggle span {
-  position: relative;
-  display: inline-block;
-  width: 5px;
-  height: 5px;
-  margin-right: 5px;
-  vertical-align: middle;
-  background-color: #fff;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-
-.v-nav__addition-toggle span:last-child {
-  margin-right: 0;
-}
-
-@media (max-width: 1024px) {
-  .nav_style .v-nav__addition {
-    text-align: right;
-  }
-  .nav_style .v-nav__addition:after {
-    position: absolute;
-    top: -15px;
-    right: 0;
-    z-index: -1;
-    width: 55px;
-    height: 56px;
-    content: "";
-    background-color: #ce6a00;
-    opacity: 0;
-    -webkit-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition: all .5s ease;
-  }
-  .nav_style .v-nav__addition-links {
-    position: absolute;
-    top: 40px;
-    right: 0;
-    min-width: 180px;
-    padding: 15px;
-    background-color: #ff911b;
-    -webkit-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition: all .5s ease;
-    -webkit-transform: translateZ(0) translateX(120%);
-    transform: translateZ(0) translateX(120%);
-  }
-  .nav_style .v-nav__addition-link {
-    font-size: 14px;
-    color: #fff;
-  }
-  .nav_style .v-nav__addition.active:after {
-    opacity: 1.00;
-  }
-  .nav_style .v-nav__addition.active .vnav__addition-links {
-    -webkit-transform: none;
-    -ms-transform: none;
-    transform: none;
-  }
-}
-
-@media (min-width: 1025px) {
-  .v-nav__addition {
-    text-align: right;
-  }
-  .v-nav__addition-toggle, .v-nav__addition-link_hidden {
-    display: none;
-  }
-}
-
-.v-site-header {
-  position: relative;
-  z-index: 1;
-  padding-top: 75px;
-  padding-bottom: 50px;
-  color: #fff;
-  background: url("../img/header.jpg") 0 0 no-repeat;
-  -webkit-background-size: cover;
-  background-size: cover;
-}
-
-@media screen and (min-width: 1025px) {
-  .v-site-header {
-    background-attachment: fixed;
-  }
-}
-
-@media (min-width: 768px) {
-  .v-site-header {
-    padding-top: 140px;
-    padding-bottom: 75px;
-  }
-}
-
-.v-footer {
-  font-size: 12px;
-}
-
 .v-color-brand-1 {
   color: #ff911b;
 }
 
 .v-color-brand-2 {
   color: #0057a2;
+}
+
+.v-color-brand-3 {
+  color: #8ac5ff;
 }
 
 .v-color-black {
@@ -1258,6 +856,21 @@ a, button {
 
 .v-text-right {
   text-align: right;
+}
+
+.v-shadow {
+  padding: 30px 15px;
+  font-size: 16px;
+  color: #000;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 13px 50px 0px rgba(0, 0, 0, .2);
+  box-shadow: 0px 13px 50px 0px rgba(0, 0, 0, .2);
+}
+
+@media (min-width: 1025px) {
+  .v-shadow {
+    padding: 30px;
+  }
 }
 
 .v-effect:before {
@@ -1746,7 +1359,6 @@ input[type="checkbox"]:checked + .control__indicator:before {
 }
 
 .v-list {
-  font-size: 15px;
   list-style: none;
 }
 
@@ -1759,15 +1371,22 @@ input[type="checkbox"]:checked + .control__indicator:before {
   content: "";
 }
 
-.v-list_cancel li {
+.v-list_check li {
   padding-left: 30px;
 }
 
-.v-list_cancel li:after {
-  top: 0;
+.v-list_check li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.v-list_check li:after {
+  top: 5px;
   left: 0;
-  width: 37px;
-  height: 37px;
+  width: 19px;
+  height: 17px;
+  background: url("../img/list-check.png") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
 }
 
 .v-title-xs, .v-title-sm, .v-title-md, .v-title-lg {
@@ -1849,8 +1468,465 @@ input[type="checkbox"]:checked + .control__indicator:before {
 
 @media (min-width: 1200px) {
   .v-title-lg {
-    font-size: 60px;
+    font-size: 53px;
   }
+}
+
+.v-fixed {
+  position: fixed;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .v-fixed + .site {
+    margin-top: 56px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-fixed_md-top {
+    top: 0;
+  }
+}
+
+.v-nav__row {
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+@media (max-width: 1024px) {
+  .v-nav_style {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 56px;
+    padding: 11px 0;
+    background-color: #ff911b;
+    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .26);
+
+    -webkit-box-align: center;
+
+    -webkit-align-items: center;
+
+    -ms-flex-align: center;
+
+    align-items: center;
+  }
+  .v-nav_style + .site {
+    margin-top: 56px;
+  }
+  .v-nav_style .v-nav__container {
+    -webkit-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-nav {
+    padding: 25px 0;
+  }
+}
+
+.v-nav__menu {
+  -webkit-overflow-scrolling: touch;
+}
+
+@media (max-width: 1024px) {
+  .v-nav__menu {
+    position: fixed;
+    top: 56px;
+    left: 0;
+    z-index: 1;
+    width: 270px;
+    height: 100%;
+    padding: 0 0 100px 0;
+    overflow-y: auto;
+    background-color: #ff911b;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+    -webkit-transform: translateZ(0) translateX(-120%);
+    transform: translateZ(0) translateX(-120%);
+  }
+  .v-nav__menu.active {
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-nav__menu {
+    color: #fff;
+    text-align: right;
+  }
+}
+
+.v-nav__menu-item {
+  display: block;
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+
+.v-nav__menu-item a {
+  position: relative;
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
+@media (max-width: 1024px) {
+  .v-nav__menu-item {
+    margin-bottom: 10px;
+  }
+  .v-nav__menu-item a {
+    padding: 10px 15px;
+    color: #fff;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-nav__menu-item {
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .v-nav__menu-item:not(:last-child) {
+    margin-right: 15px;
+  }
+  .v-nav__menu-item a {
+    padding-top: 7.5px;
+    padding-bottom: 7.5px;
+  }
+  .v-nav__menu-item a:before, .v-nav__menu-item a:after {
+    position: absolute;
+    bottom: -2px;
+    width: 0%;
+    height: 2px;
+    content: "";
+    background-color: #ff911b;
+  }
+  .v-nav__menu-item a:before {
+    left: 0;
+  }
+  .v-nav__menu-item a:after {
+    right: 0;
+    -webkit-transition: width .8s cubic-bezier(.22, .61, .36, 1);
+    -o-transition: width .8s cubic-bezier(.22, .61, .36, 1);
+    transition: width .8s cubic-bezier(.22, .61, .36, 1);
+  }
+  .v-nav__menu-item a:hover:before {
+    width: 100%;
+    -webkit-transition: width .5s cubic-bezier(.22, .61, .36, 1);
+    -o-transition: width .5s cubic-bezier(.22, .61, .36, 1);
+    transition: width .5s cubic-bezier(.22, .61, .36, 1);
+  }
+  .v-nav__menu-item a:hover:after {
+    width: 100%;
+    background-color: transparent;
+    -webkit-transition: 0s;
+    -o-transition: 0s;
+    transition: 0s;
+  }
+}
+
+.v-nav__logo {
+  font-size: 0;
+}
+
+.v-nav__logo-content {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.v-nav__logo-content-img {
+  max-height: 23px;
+}
+
+@media (min-width: 1025px) {
+  .v-nav__logo-content-img {
+    max-height: 46px;
+  }
+}
+
+/* -----------------------------------------------------------------------------
+
+  HAMBURGER COMPONENT
+  
+----------------------------------------------------------------------------- */
+.v-hamburger {
+  padding: 0;
+  margin-right: 15px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+
+  -webkit-appearance: none;
+
+  -moz-appearance: none;
+
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.v-hamburger, .v-hamburger__lines, .v-hamburger__text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.v-hamburger, .v-hamburger__lines, .v-hamburger__lines span {
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.v-hamburger__lines {
+  position: relative;
+  width: 24px;
+  height: 20px;
+  text-indent: -9999px;
+}
+
+.v-hamburger__lines span {
+  position: absolute;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+}
+
+.v-hamburger__lines span:nth-child(1) {
+  top: 0;
+  -webkit-transform-origin: 3px 5px;
+  -ms-transform-origin: 3px 5px;
+  transform-origin: 3px 5px;
+}
+
+.v-hamburger__lines span:nth-child(2) {
+  top: 8px;
+  opacity: 1;
+}
+
+.v-hamburger__lines span:nth-child(3) {
+  top: 16px;
+  -webkit-transform-origin: 1px -1px;
+  -ms-transform-origin: 1px -1px;
+  transform-origin: 1px -1px;
+}
+
+.v-hamburger__text {
+  margin-left: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.v-hamburger.active .v-hamburger__lines span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.v-hamburger.active .v-hamburger__lines span:nth-child(2) {
+  opacity: 0;
+  -webkit-transform: translateX(-60px);
+  -ms-transform: translateX(-60px);
+  transform: translateX(-60px);
+}
+
+.v-hamburger.active .v-hamburger__lines span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+@media (min-width: 1025px) {
+  .v-hamburger {
+    display: none;
+  }
+}
+
+.v-nav__addition {
+  position: relative;
+  display: inline-block;
+  font-weight: bold;
+  color: #000;
+}
+
+.v-nav__addition-link {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
+.v-nav__addition-toggle {
+  display: block;
+  cursor: pointer;
+  outline: none;
+
+  -webkit-tap-highlight-color: transparent;
+}
+
+.v-nav__addition-toggle span {
+  position: relative;
+  display: inline-block;
+  width: 5px;
+  height: 5px;
+  margin-right: 5px;
+  vertical-align: middle;
+  background-color: #fff;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+}
+
+.v-nav__addition-toggle span:last-child {
+  margin-right: 0;
+}
+
+@media (max-width: 1024px) {
+  .nav_style .v-nav__addition {
+    text-align: right;
+  }
+  .nav_style .v-nav__addition:after {
+    position: absolute;
+    top: -15px;
+    right: 0;
+    z-index: -1;
+    width: 55px;
+    height: 56px;
+    content: "";
+    background-color: #ce6a00;
+    opacity: 0;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+  }
+  .nav_style .v-nav__addition-links {
+    position: absolute;
+    top: 40px;
+    right: 0;
+    min-width: 180px;
+    padding: 15px;
+    background-color: #ff911b;
+    -webkit-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
+    -webkit-transform: translateZ(0) translateX(120%);
+    transform: translateZ(0) translateX(120%);
+  }
+  .nav_style .v-nav__addition-link {
+    font-size: 14px;
+    color: #fff;
+  }
+  .nav_style .v-nav__addition.active:after {
+    opacity: 1.00;
+  }
+  .nav_style .v-nav__addition.active .vnav__addition-links {
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-nav__addition {
+    text-align: right;
+  }
+  .v-nav__addition-toggle, .v-nav__addition-link_hidden {
+    display: none;
+  }
+}
+
+.v-site-header {
+  position: relative;
+  z-index: 1;
+  padding-top: 75px;
+  padding-bottom: 50px;
+  color: #fff;
+  background: url("../img/header.jpg") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+@media screen and (min-width: 1025px) {
+  .v-site-header {
+    background-attachment: fixed;
+  }
+}
+
+@media (min-width: 768px) {
+  .v-site-header {
+    padding-top: 140px;
+    padding-bottom: 75px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .v-site-header__row {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+}
+
+.v-site-header__title {
+  margin-bottom: 30px;
+}
+
+.v-site-header__title-flag {
+  position: relative;
+  display: inline-block;
+}
+
+.v-site-header__title-flag:before {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 27px;
+  height: 18px;
+  content: "";
+  background: url("../img/flag-poland.png") 0 0 no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+
+.v-site-header__description-title {
+  padding: 15px 15px 60px 15px;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.v-site-header__description-content {
+  position: relative;
+  top: -45px;
+  padding-right: 75px;
+}
+
+.v-site-header__description-content-inner {
+  padding: 5px 30px 30px 15px;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+.v-site-header__description-footer {
+  margin-top: 15px;
+}
+
+.v-footer {
+  font-size: 12px;
 }
 
 .vtabs__list {
