--- a/app/pug/layouts/header.html
+++ b/app/pug/layouts/header.html
@@ -1,7 +1,47 @@
 
 <header class="v-site-header">
   <div class="v-container">
-    <h1 class="v-title-lg">Среднее<br/>образование в <span class="flag">Польше</span>
-    </h1>
+    <div class="v-site-header__row v-row">
+      <div class="v-col-12 v-col-sm-7">
+        <h1 class="v-site-header__title v-title-lg">Среднее<br/>образование в <span class="v-site-header__title-flag">Польше</span>
+        </h1>
+        <div class="v-site-header__description">
+          <p class="v-site-header__description-title">Поможем Вашему ребенку поступить в престижную польскую школу, лицей или техникум, после которого он сможет:
+          </p>
+          <div class="v-site-header__description-content">
+            <div class="v-site-header__description-content-inner">
+              <ul class="v-list v-list_check">
+                <li>Стать студентом рейтингового Европейского вуза</li>
+                <li>Остаться жить и работать в Европе или</li>
+                <li>Вернуться востребованным специалистом в Украину</li>
+              </ul>
+              <div class="v-site-header__description-footer">
+                <p><span class="v-color-brand-3">* </span>9 из 10 детей наших клиентов остаются жить в Европе после окончания лицея или техникума в Польше</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="v-col-12 v-col-sm-5 v-col-md-4">
+        <div class="v-shadow">
+          <p class="v-shadow__title">Запишитесь на<span class="color-brand-2">бесплатную консультацию</span>и мы предварительно оценим шансы Вашего ребенка на поступление
+          </p>
+          <form class="v-form v-form_block" action="mail.php" method="POST">
+            <div class="v-form__content">
+              <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+              </div>
+              <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
+              </div>
+              <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
+              </div>
+              <div class="v-form__row">
+                <button class="v-form__submit v-vbtn v-vbtn_color-brand-1" type="submit">Проконсультироваться<br>бесплатно
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 </header>
