--- a/app/sass/helpers/variables/_var-colors.scss
+++ b/app/sass/helpers/variables/_var-colors.scss
@@ -19,6 +19,9 @@ $color-brand-1: #ff911b;
 /// Color Branding Two
 $color-brand-2: #0057a2;
 
+/// Color Branding Three
+$color-brand-3: #8ac5ff;
+
 /// Color Success
 $color-success: #5cb85c;
 
