--- a/app/pug/layouts/header.html
+++ b/app/pug/layouts/header.html
@@ -1,5 +1,7 @@
 
 <header class="v-site-header">
+  <div class="v-quadro"><span class="v-quadro__part v-quadro__part_1"></span><span class="v-quadro__part v-quadro__part_2"></span><span class="v-quadro__part v-quadro__part_3"></span><span class="v-quadro__part v-quadro__part_4"></span><span class="v-quadro__part v-quadro__part_5"></span><span class="v-quadro__part v-quadro__part_6"></span><span class="v-quadro__part v-quadro__part_7"></span><span class="v-quadro__part v-quadro__part_8"></span><span class="v-quadro__part v-quadro__part_9"></span>
+  </div>
   <div class="v-container">
     <div class="v-site-header__row v-row">
       <div class="v-col-12 v-col-sm-7">
@@ -24,22 +26,24 @@
       </div>
       <div class="v-col-12 v-col-sm-5 v-col-md-4">
         <div class="v-shadow">
-          <p class="v-shadow__title">Запишитесь на<span class="color-brand-2">бесплатную консультацию</span>и мы предварительно оценим шансы Вашего ребенка на поступление
+          <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
           </p>
-          <form class="v-form v-form_block" action="mail.php" method="POST">
-            <div class="v-form__content">
-              <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+          <div class="v-shadow__content">
+            <form class="v-form v-form_block" action="mail.php" method="POST">
+              <div class="v-form__content">
+                <div class="v-form__row"><input class="v-form__control" name="vname" type="text" placeholder="Ваше имя"/>
+                </div>
+                <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
+                </div>
+                <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
+                </div>
+                <div class="v-form__row">
+                  <button class="v-form__submit v-btn v-btn_brand-1 v-btn_shadow-brand-1 v-btn_size-fluid" type="submit">Проконсультироваться<br>бесплатно
+                  </button>
+                </div>
               </div>
-              <div class="v-form__row"><input class="v-form__control" name="vemail" type="email" placeholder="Ваш email"/>
-              </div>
-              <div class="v-form__row"><input class="v-form__control" name="vphone" type="tel" placeholder="Ваш телефон"/>
-              </div>
-              <div class="v-form__row">
-                <button class="v-form__submit v-vbtn v-vbtn_color-brand-1" type="submit">Проконсультироваться<br>бесплатно
-                </button>
-              </div>
-            </div>
-          </form>
+            </form>
+          </div>
         </div>
       </div>
     </div>
