--- a/app/pug/layouts/nav.html
+++ b/app/pug/layouts/nav.html
@@ -1,6 +1,6 @@
 
 <div class="v-fixed v-fixed_md-top">
-  <div class="v-nav v-nav_style">
+  <div class="v-nav v-nav_style" id="js-wrapper-navigation">
     <div class="v-nav__container v-container">
       <div class="v-nav__row v-row v-flex v-flex_y-center">
         <div class="v-nav__logo v-col-8 v-col-md-3">
@@ -10,7 +10,7 @@
           <div class="v-nav__logo-content"><img class="v-nav__logo-content-img" src="img/logo.png" alt="" role="presentation"/>
           </div>
         </div>
-        <nav class="v-nav__menu v-col-12 v-col-md-9" id="navigation"><ul>
+        <nav class="v-nav__menu v-col-12 v-col-md-9" id="js-navigation"><ul>
           <li class="v-nav__menu-item"><a href="#section-consultation">Что будет на консультации</a>
           </li>
           <li class="v-nav__menu-item"><a href="#section-about">О нас</a>
