--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -18,8 +18,11 @@
 @import 'utilities/offsets';
 @import 'utilities/text';
 
-// Button
 @import 'components/shadow';
+@import 'components/quadro';
+
+// Button
+
 
 @import 'components/button/helpers';
 @import 'components/button/effects';
