--- a/app/sass/components/_shadow.scss
+++ b/app/sass/components/_shadow.scss
@@ -4,7 +4,18 @@
 	background-color: #fff;
 	color: $color-general;
 	font-size: 16px;
+	@include e('title'){
+		font-family: 'FormularBold';
+		text-align: center;
+		margin-bottom: 30px;
+		span{
+			display: block;
+		}
+	}
 	@include min(md){
-		padding: 30px;
+		padding: 30px 20px;
+		@include e('content'){
+			@include padding-x(10px);
+		}
 	}
 }
