--- a/app/sass/components/button/_button.scss
+++ b/app/sass/components/button/_button.scss
@@ -8,13 +8,14 @@
   overflow: hidden;
   max-width: 100%;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
+  font-family: 'FormularBold';
   line-height: 1.4;
   -webkit-tap-highlight-color: transparent;
   outline: none;
   transform: translateZ(0);
   @include transition();
-  @extend .font-weight-bold !optional;
+  
 }
 
 @include b('btn'){
