--- a/app/sass/layouts/nav/_nav.scss
+++ b/app/sass/layouts/nav/_nav.scss
@@ -1,4 +1,5 @@
 @include b($themeNav){
+	@include transition();
 	@include e('row'){
 		justify-content: space-between;
 	}
@@ -27,5 +28,9 @@
 	}
 	@include min(md){
 		padding: 25px 0;
+		@include m('scrolled'){
+			padding: 15px;
+			background-color: $color-brand-2;
+		}
 	}
 }
