--- a/app/sass/components/_quadro.scss
+++ b/app/sass/components/_quadro.scss
@@ -1,7 +1,32 @@
+$quadro-size: 102px;
+$quadro-size_sm: 204px;
 @include b('quadro'){
+	display: flex;
+	flex-flow: row wrap;
 	@include absolute();
-	@include size(102px);
-	@include min(sm){
-		@include size(204px);
+	@include size($quadro-size);
+	@include e('part'){
+		@include size($quadro-size / 3);
 	}
+	background-color: transparent;
+	@include min(sm){
+		@include size($quadro-size_sm);
+		@include e('part'){
+			@include size($quadro-size_sm / 3);
+		}
+	}
+	&_style-1 &{
+		@include e('part'){
+			@include m('3'){
+				background-color: $color-brand-3;
+			}
+			@include m('5'){
+				background-color: $color-brand-2;
+			}
+			@include m('7'){
+				background-color: $color-brand-3;
+			}
+		}
+	}
+	
 }
