--- a/app/index.pug
+++ b/app/index.pug
@@ -6,5 +6,7 @@ block nav
 block header
 	include pug/layouts/header
 block content
+	include pug/sections/bonus
+	include pug/sections/ukrainian-study
 block footer
 	include pug/layouts/footer
