--- a/app/pug/layouts/header.pug
+++ b/app/pug/layouts/header.pug
@@ -25,10 +25,11 @@ include ../helpers/mixins
 									|9 из 10 детей наших клиентов остаются жить в Европе после окончания лицея или техникума в Польше
 			.v-col-12.v-col-sm-5.v-col-md-4
 				+b.shadow
-					+e.P.title
-						| Запишитесь на 
-						span.v-color-brand-2 бесплатную консультацию 
-						| и мы предварительно оценим шансы Вашего ребенка на поступление
+					+e.header
+						+e.P.title
+							| Запишитесь на 
+							span.v-color-brand-2 бесплатную консультацию 
+							| и мы предварительно оценим шансы Вашего ребенка на поступление
 					+e.content
 						+b.FORM.form._block(action="mail.php" method="POST")
 							+e.content
