--- a/app/sass/components/form/_form-helpers.scss
+++ b/app/sass/components/form/_form-helpers.scss
@@ -5,9 +5,11 @@ $themeFormDesign: 'old';
 	padding: 15px;
 	width: 100%;
 	max-width: 100%;
-	color: #000;
-	text-align: left;
+	color: $color-general;
+	text-align: center;
 	font-size: 15px;
+	font-family: 'FormularBold';
+	font-style: italic;
 	-webkit-appearance: none;
 	outline: none;
 	@include transition();
