--- a/app/pug/layouts/header.html
+++ b/app/pug/layouts/header.html
@@ -26,8 +26,10 @@
       </div>
       <div class="v-col-12 v-col-sm-5 v-col-md-4">
         <div class="v-shadow">
-          <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
-          </p>
+          <div class="v-shadow__header">
+            <p class="v-shadow__title">Запишитесь на <span class="v-color-brand-2">бесплатную консультацию </span>и мы предварительно оценим шансы Вашего ребенка на поступление
+            </p>
+          </div>
           <div class="v-shadow__content">
             <form class="v-form v-form_block" action="mail.php" method="POST">
               <div class="v-form__content">
