--- a/app/sass/components/text/_title.scss
+++ b/app/sass/components/text/_title.scss
@@ -10,8 +10,7 @@ $sizes: (
 	),
 	'v-title-md': (
 		sm:   30px,
-		md:   40px,
-		lg:   50px
+		md:   36px
 	),
 	'v-title-lg': (
 		sm:   40px,
@@ -48,5 +47,12 @@ $sizes: (
 		font-size: 30px;
 		@include fs('v-title-lg');
 		@extend %v-title-default;
+	}
+	&-section{
+		text-align: center;
+		margin-bottom: 45px;
+		@include min(sm){
+			margin-bottom: 60px;
+		}
 	}
 }
