--- a/app/sass/layouts/nav/_nav-menu-item.scss
+++ b/app/sass/layouts/nav/_nav-menu-item.scss
@@ -8,6 +8,7 @@
 				position: relative;
 				color: inherit;
 				text-decoration: none;
+				font-size: 16px;
 			}
 			@include max(md){
 				margin-bottom: 10px;
