--- a/app/index.pug
+++ b/app/index.pug
@@ -8,5 +8,6 @@ block header
 block content
 	include pug/sections/bonus
 	include pug/sections/ukrainian-study
+	include pug/sections/future
 block footer
 	include pug/layouts/footer
